--- a/css/navigation-style.css
+++ b/css/navigation-style.css
@@ -133,3 +133,5 @@ src: url(font/BLANCH_CONDENSED.otf);
   display: none;
   }
 }
+
+.navbar { margin-bottom:0;}
